--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
-Package: seminar
-Title: What the Package Does (one line, title case)
+Package: seminar2016
+Title: Slides and Data Analysis for PhD Seminar Fall 2016
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Luke", "Johnston", email = "lwjohnst@gmail.com", role = c("aut", "cre"))
+Description: Contains my slides and data analysis code for my PhD seminar
+    presentation for the Fall term 2016.
 Depends: R (>= 3.3.1)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
 Imports: devtools
+URL: https://github.com/lwjohnst86/seminar2016
+BugReports: https://github.com/lwjohnst86/seminar2016/issues
